--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,22 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>		
+		</dependency>	
+		<dependency>
+  		<groupId>org.mockito</groupId>
+  		<artifactId>mockito-all</artifactId>
+  		<version>1.10.19</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.powermock</groupId>
+  		<artifactId>powermock-api-mockito</artifactId>
+  		<version>1.6.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.powermock</groupId>
+  		<artifactId>powermock-module-junit4</artifactId>
+  		<version>1.6.6</version>
+  	</dependency>	
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
